--- a/src/main/java/com/mycompany/HomePage.html
+++ b/src/main/java/com/mycompany/HomePage.html
@@ -5,10 +5,7 @@
     <title>quickstart</title>
 </head>
 <body>
-
-
 <span wicket:id="version">Version wicket</span>
-
-
+<a href="logout">LogOut</a>
 </body>
 </html>
